# SpreadSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  SpreadSimulator  compile.py  main.c  main.go  plotGenerator.py  run.py
SpreadSimGUI/: StatRenderer.py  default.cfg  mainwindow.cpp  mainwindow.h  mainwindow.ui
SpreadSimulator/: CMakeLists.txt  MedicalComponent.c  MedicalComponent.h  SimulationSettings.c  SimulationSettings.h  SimulatorStats.c  SimulatorStats.h  SpreadSimulator.c  SpreadSimulator.h
SpreadSimulator/Quadtree/: CMakeLists.txt  PositionIndexPair.h  PositionIndexPairList.c  PositionIndexPairList.h  Quadtree.c  Quadtree.h  Rect.c  Rect.h  Vector2.c  Vector2.h
backends/: IBackend.go  NoGUIBackend.go  SDLBackend.go
config/: Config.go
configs/: standard.json
docs/: MedicalComponent_8h.html  MedicalComponent_8h_source.html  PositionIndexPairList_8h.html  PositionIndexPairList_8h_source.html  PositionIndexPair_8h.html  PositionIndexPair_8h_source.html  Quadtree_8h.html  Quadtree_8h_source.html  Rect_8h.html  Rect_8h_source.html  SimulationSettings_8h.html  SimulationSettings_8h_source.html  SimulatorStats_8h.html  SimulatorStats_8h_source.html  SpreadSimulator_8h.html  SpreadSimulator_8h_source.html  Vector2_8h.html  Vector2_8h_source.html  annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_01ef41b54370909b13a73136f08bb703.html  dir_128db0dfd2518540c522966834e5be1f.html  dir_2335e5696f7a7e89398d83f430c8bdeb.html  dir_2942f868a03c41b22a536fdc77b965b5.html  dir_3f49979b2ec62e6784d50b8555681a91.html  (+48 more)
measures/: cputime_new.txt  (+1 more)
(+81 files in other folders)
